--- a/develop/blocks/object-finances/object-finances.pug
+++ b/develop/blocks/object-finances/object-finances.pug
@@ -7,9 +7,8 @@ mixin object-finances()
             table
                 tr
                     td
-                        .heading Работа фонда
-                    td Август 2017
-                    td Сентябрь 2017
+                        .heading Сводные данные
+                    td Сентябрь 2022
                     td Октябрь 2017
                     td Ноябрь 2017
                     td Декабрь 2017
@@ -31,37 +30,37 @@ mixin object-finances()
                     //- td &nbsp;
                 tr
                     th Доход
-                    each val in Array.from(new Array(20))
+                    each val in Array.from(new Array(19))
                         td 10 390 тыс. ₽
                     //- td
                         //- | &nbsp;
-                tr   
+                tr
                     th Расход
-                    each val in Array.from(new Array(20))
+                    each val in Array.from(new Array(19))
                         td 0.00 ₽
                     //- td
                         //- | &nbsp;
-                tr   
+                tr
                     th ЧОД
-                    each val in Array.from(new Array(20))
+                    each val in Array.from(new Array(19))
                         td 139 тыс. ₽
                     //- td
                         //- | &nbsp;
-                tr   
+                tr
                     th Комиссия за управление
-                    each val in Array.from(new Array(20))
+                    each val in Array.from(new Array(19))
                         td 99.99 ₽
                     //- td
                         //- | &nbsp;
-                tr   
+                tr
                     th Доход на распределение
-                    each val in Array.from(new Array(20))
+                    each val in Array.from(new Array(19))
                         td 12 290.99 ₽
                     //- td
                         //- | &nbsp;
-                tr   
+                tr
                     th Доход на пай до НДФЛ
-                    each val in Array.from(new Array(20))
+                    each val in Array.from(new Array(19))
                         td 1 700.01 ₽
                     //- td
                         //- | &nbsp;
