--- a/develop/blocks/object-slider/object-slider.scss
+++ b/develop/blocks/object-slider/object-slider.scss
@@ -129,6 +129,10 @@
         }
     }
 
+    &__progress {
+        position: relative;
+    }
+
     &__play {
         position: absolute;
         left: 50%;
