--- a/develop/blocks/custom-select/custom-select.scss
+++ b/develop/blocks/custom-select/custom-select.scss
@@ -20,42 +20,36 @@
         display: block;
         margin: 0;
 
-        font-size: 14px;
+        font-size: 8px;
         line-height: 1.6;
-        color: $text-color;
+        color: #696969;
     }
 
     &__selected {
         @include btn-reset;
-        width: 100%;
         position: relative;
-        height: 50px;
-        padding-left: 12px;
-        padding-right: 32px;
+        width: 100%;
+        padding: 0 20px 7px 0;
 
-        color: $text-color;
-        font-size: 14px;
+        color: #696969;
+        font-size: 11px;
         font-weight: 400;
-        line-height: 1;
         text-align: left;
 
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
+        border: none;
+        appearance: none;
+        outline: none;
+        cursor: pointer;
+        border-bottom: 1px solid #696969;
+        background-color: transparent;
 
-        background-color: #fff;
-        border: 1px solid $text-color-light;
+        transition: border-color 300ms ease;
 
-        // transition: background-color 300ms ease;
-
-
-
-        // &:hover,
-        // &:active,
-        // &:focus {
-        //     background-color: rgba($color: $bg, $alpha: 0.5);
-        // }
-
+        &:hover,
+        &:active,
+        &:focus {
+            border-color: $theme-color;
+        }
         &:focus {
             outline: none;
         }
@@ -64,14 +58,13 @@
             content: '';
             position: absolute;
             top: 50%;
-            right: 12px;
+            width: 9px;
+            height: 5px;
+            right: 0;
             transform: translateY(-50%);
 
-            border-left: 6px solid transparent;
-            border-right: 6px solid transparent;
-
-            border-top: 6px solid $text-color;
-            border-radius: 2px;
+            background-image: url(../images/redesign/chevron.svg);
+            background-size: cover;
 
             transition: transform 300ms ease;
         }
@@ -89,11 +82,7 @@
         height: auto;
         max-height: 180px;
 
-        transform: translateY(8px);
-
         background-color: #ffffff;
-        border: 1px solid $text-color-light;
-        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
 
         .simplebar-track.simplebar-vertical {
             right: 7px;
@@ -104,18 +93,21 @@
 
     &__options {
         margin: 0;
-        padding: 16px;
+        padding: 0;
 
         list-style: none;
     }
 
     &__option {
-        padding: 10px 0;
+        display: block;
+        padding: 10px 2px;
 
         color: $text-color;
-        font-size: 16px;
+        font-size: 12px;
+        text-decoration: none;
 
-        transition: opacity 300ms ease;
+        background-color: #f4f4f4;
+        transition: background-color 300ms ease;
 
         outline: none;
         cursor: pointer;
@@ -123,7 +115,7 @@
         &:hover,
         &:active,
         &:focus {
-            opacity: 0.6;
+            background-color: #eaeaea;
         }
 
         &:focus {
