--- a/develop/blocks/index-slider/index-slider.scss
+++ b/develop/blocks/index-slider/index-slider.scss
@@ -46,6 +46,13 @@
         height: 100%;
     }
 
+    &__progress {
+        position: absolute;
+        width: 100%;
+        top: 0;
+        z-index: 1;
+    }
+
     &__image {
         position: absolute;
         width: 100%;
