--- a/develop/blocks/object-card/object-card.scss
+++ b/develop/blocks/object-card/object-card.scss
@@ -2,6 +2,11 @@
     position: relative;
     z-index: 11;
 
+    &__progress {
+        width: 100%;
+        height: 20px;
+    }
+
     &__header {
         position: relative;
         width: 100%;
@@ -174,6 +179,10 @@
         width: 100%;
         table-layout: fixed;
 
+        tr {
+            vertical-align: baseline;
+        }
+
         td {
             padding: 6px 0;
 
@@ -182,6 +191,13 @@
             &:first-child {
                 width: 65%;
                 padding-right: 10px;
+            }
+
+            small {
+                display: block;
+
+                font-size: 10px;
+                color: #4a4a4a;
             }
 
             .value {
@@ -196,8 +212,8 @@
             }
 
             &[colspan='2'] {
-                padding-top: 24px;
-                text-align: center;
+                padding-top: 36px;
+                text-align: left;
                 position: relative;
 
                 &::before {
@@ -205,7 +221,7 @@
                     position: absolute;
                     width: 100%;
                     height: 1px;
-                    top: 12px;
+                    top: 16px;
                     left: 0;
 
                     background-color: #ddd;
