--- a/develop/blocks/object-location/object-location.scss
+++ b/develop/blocks/object-location/object-location.scss
@@ -108,7 +108,7 @@
         }
 
         &__main {
-            width: 35vw;
+            width: calc(55vw - 35px);;
             flex: 0 0 auto;
             margin-bottom: 0;
             padding-right: 15px;
@@ -139,7 +139,6 @@
 @media #{$laptop} {
     .object-location {
         &__main {
-            width: 43vw;
             padding-right: 45px;
         }
 
@@ -151,8 +150,8 @@
 @media #{$desktop} {
     .object-location {
         &__main {
-            width: 542px;
             padding-right: 60px;
+            width: 750px;
         }
 
         &__data {
