--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8288,7 +8288,9 @@ th {
     display: -ms-flexbox;
     display: flex; }
   .object-description__main {
-    width: 35vw;
+    width: -webkit-calc(55vw - 35px);
+    width: -moz-calc(55vw - 35px);
+    width: calc(55vw - 35px);
     -webkit-box-flex: 0;
        -moz-box-flex: 0;
         -ms-flex: 0 0 auto;
@@ -8307,15 +8309,14 @@ th {
 
 @media (min-width: 1024px) {
   .object-description__main {
-    width: 43vw;
     padding-right: 45px; }
   .object-description__data-value {
     font-size: 60px; } }
 
 @media (min-width: 1200px) {
   .object-description__main {
-    width: 542px;
-    padding-right: 65px; }
+    padding-right: 65px;
+    width: 750px; }
   .object-description__data {
     margin-bottom: 30px; }
   .object-description__data-value {
@@ -8388,7 +8389,9 @@ th {
     display: -ms-flexbox;
     display: flex; }
   .object-estimates__main {
-    width: 35vw;
+    width: -webkit-calc(55vw - 35px);
+    width: -moz-calc(55vw - 35px);
+    width: calc(55vw - 35px);
     -webkit-box-flex: 0;
        -moz-box-flex: 0;
         -ms-flex: 0 0 auto;
@@ -8404,13 +8407,11 @@ th {
 
 @media (min-width: 1024px) {
   .object-estimates__main {
-    width: 43vw; }
+    width: 750px; }
   .object-estimates__sum-value {
     font-size: 58px; } }
 
 @media (min-width: 1200px) {
-  .object-estimates__main {
-    width: 542px; }
   .object-estimates__sum-value {
     font-size: 72px; } }
 
@@ -8737,7 +8738,9 @@ th {
     display: flex;
     margin-bottom: 45px; }
   .object-location__main {
-    width: 35vw;
+    width: -webkit-calc(55vw - 35px);
+    width: -moz-calc(55vw - 35px);
+    width: calc(55vw - 35px);
     -webkit-box-flex: 0;
        -moz-box-flex: 0;
         -ms-flex: 0 0 auto;
@@ -8762,19 +8765,144 @@ th {
 
 @media (min-width: 1024px) {
   .object-location__main {
-    width: 43vw;
     padding-right: 45px; }
   .object-location__data-value {
     font-size: 74px; } }
 
 @media (min-width: 1200px) {
   .object-location__main {
-    width: 542px;
-    padding-right: 60px; }
+    padding-right: 60px;
+    width: 750px; }
   .object-location__data {
     margin-bottom: 30px; }
   .object-location__data-value {
     font-size: 74px; } }
+
+.object-new {
+  position: relative; }
+  .object-new__title {
+    display: none; }
+  .object-new__wrapper {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+       -moz-box-orient: vertical;
+       -moz-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap; }
+  .object-new__navigation {
+    padding-top: 30px; }
+  .object-new__navigation-list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    border-bottom: 1px solid #ebebeb; }
+    .object-new__navigation-list .slick-list {
+      padding-bottom: 2px;
+      margin-bottom: -2px; }
+  .object-new__navigation-item {
+    position: relative;
+    margin-bottom: 10px;
+    outline: none; }
+    .object-new__navigation-item:last-child {
+      margin-bottom: 0; }
+  .object-new__navigation-link {
+    position: relative;
+    padding: 12px 6px 3px;
+    font-size: 12px;
+    white-space: nowrap;
+    color: #000;
+    text-decoration: none;
+    -webkit-transition: color 300ms ease;
+    -moz-transition: color 300ms ease;
+    transition: color 300ms ease; }
+    .object-new__navigation-link:hover, .object-new__navigation-link:active, .object-new__navigation-link:focus {
+      color: #fed63f;
+      text-decoration: none; }
+    .object-new__navigation-link::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      bottom: -1px;
+      left: 0;
+      -webkit-transform: scaleX(0);
+         -moz-transform: scaleX(0);
+          -ms-transform: scaleX(0);
+              transform: scaleX(0);
+      background-color: #fed63f;
+      -webkit-transition: -webkit-transform 300ms ease;
+      transition: -webkit-transform 300ms ease;
+      -moz-transition: transform 300ms ease, -moz-transform 300ms ease;
+      transition: transform 300ms ease;
+      transition: transform 300ms ease, -webkit-transform 300ms ease, -moz-transform 300ms ease; }
+    .object-new__navigation-link.active {
+      font-weight: 600; }
+      .object-new__navigation-link.active::after {
+        -webkit-transform: scaleX(1);
+           -moz-transform: scaleX(1);
+            -ms-transform: scaleX(1);
+                transform: scaleX(1); }
+    .object-new__navigation-link svg {
+      position: relative;
+      width: 16px;
+      height: 16px;
+      right: 0px;
+      top: 0;
+      fill: #fed63f; }
+  .object-new__section {
+    padding: 0 1px;
+    margin-bottom: 35px; }
+    .object-new__section--top {
+      margin-bottom: 20px; }
+    .object-new__section:last-child {
+      margin-bottom: 0; }
+
+@media (min-width: 768px) {
+  .object-new {
+    padding-top: 50px; }
+    .object-new .lines .line {
+      width: 30%;
+      left: 55vw; }
+      .object-new .lines .line::after {
+        display: none; }
+    .object-new__title {
+      display: block;
+      margin-bottom: 35px; }
+    .object-new__wrapper {
+      width: 100%; }
+    .object-new__navigation {
+      padding-top: 0;
+      padding-bottom: 24px; }
+    .object-new__navigation-item {
+      padding-right: 16px; }
+    .object-new__navigation-link {
+      font-size: 14px; }
+    .object-new__section {
+      width: 100%; } }
+
+@media (min-width: 1024px) {
+  .object-new {
+    padding-top: 80px; }
+    .object-new__navigation-link {
+      font-size: 16px; } }
+
+@media (min-width: 1200px) {
+  .object-new .lines .line {
+    left: 750px; }
+  .object-new__wrapper {
+    width: 100%; }
+  .object-new__navigation-link {
+    font-size: 18px; }
+  .object-new__section {
+    margin-bottom: 55px; } }
 
 .object-plans__title {
   margin-bottom: 16px; }
