--- a/develop/blocks/account-monitoring/account-monitoring.pug
+++ b/develop/blocks/account-monitoring/account-monitoring.pug
@@ -1,7 +1,7 @@
 mixin account-monitoring(color = '#FED63F')
     +b.account-monitoring
-        +e.header
-            +monitoring-header
+        //- +e.header
+        //-     +monitoring-header
         +e.wrapper
             +e.sidebar
                 +monitoring-funds
