--- a/develop/blocks/monitoring-funds/monitoring-funds.pug
+++ b/develop/blocks/monitoring-funds/monitoring-funds.pug
@@ -5,42 +5,42 @@ mixin monitoring-funds()
                 +e.cell 100%
                 +e.cell Все фонды
                 +e.cell 31 776 884.63 ₽
-            +e.row(style='--fund-color: #FFD48C; --fund-value: 1.66')
+            +e.row(style='--fund-value: 1.66')
                 +e.A.link(href='#1')
                 +e.cell 1.66%
-                +e.cell Активо один 
+                +e.cell Активо один
                 +e.cell 525 313.90 ₽
-            +e.row(style='--fund-color: #C29BF6; --fund-value: 13.67')
+            +e.row(style='-fund-value: 13.67')
                 +e.A.link(href='#1')
                 +e.cell 13.67%
-                +e.cell Активо два 
+                +e.cell Активо два
                 +e.cell 4 344 132.00 ₽
-            +e.row(style='--fund-color: #FF9BC6; --fund-value: 7.08')
+            +e.row(style='--fund-value: 7.08')
                 +e.A.link(href='#1')
                 +e.cell 7.08%
-                +e.cell Активо три 
+                +e.cell Активо три
                 +e.cell 2 249 100.00 ₽
-            +e.row(style='--fund-color: #FFEB93; --fund-value: 31.35')
+            +e.row(style='-fund-value: 31.35')
                 +e.A.link(href='#1')
                 +e.cell 31.35%
-                +e.cell Активо четыре 
+                +e.cell Активо четыре
                 +e.cell 9 960 612.25 ₽
-            +e.row(style='--fund-color: #FFA9AB; --fund-value: 16.77')
+            +e.row(style='-fund-value: 16.77')
                 +e.A.link(href='#1')
                 +e.cell 16.77%
-                +e.cell Активо пять 
+                +e.cell Активо пять
                 +e.cell 5 329 201.78 ₽
-            +e.row(style='--fund-color: #FFD48C; --fund-value: 18.9')
+            +e.row(style='--fund-value: 18.9')
                 +e.A.link(href='#1')
                 +e.cell 18.90%
-                +e.cell Активо шеть 
+                +e.cell Активо шеть
                 +e.cell 6 006 122.46 ₽
-            +e.row(style='--fund-color: #F598E2; --fund-value: 2.18')
+            +e.row(style='--fund-value: 2.18')
                 +e.A.link(href='#1')
                 +e.cell 2.18%
-                +e.cell Активо десять 
+                +e.cell Активо десять
                 +e.cell 692 529.84 ₽
-            +e.row(style='--fund-color: #79A0FF; --fund-value: 8.4')
+            +e.row(style=' --fund-value: 8.4')
                 +e.A.link(href='#1')
                 +e.cell 8.40%
                 +e.cell Активо
