--- a/develop/blocks/monitoring-graph/monitoring-graph.scss
+++ b/develop/blocks/monitoring-graph/monitoring-graph.scss
@@ -41,7 +41,7 @@
                             left: 0;
                             right: 0;
                             opacity: 1;
-                            background-color: var(--fund-color);
+                            background-color: #cecece;
                             border-radius: 0;
                         }
                     }
