--- a/develop/blocks/account-monitoring/account-monitoring.scss
+++ b/develop/blocks/account-monitoring/account-monitoring.scss
@@ -18,6 +18,8 @@
 
         &__wrapper {
             display: flex;
+
+            border-top: 1px solid rgba(#919191, 0.2);
         }
 
         &__sidebar {
