--- a/develop/jade/account-page-8.pug
+++ b/develop/jade/account-page-8.pug
@@ -9,7 +9,7 @@ html(lang='ru')
     body
         +main-header
         +account-layout
-            +account-monitoring('#FF9BC6')
+            +account-monitoring()
                 +e.header
                     +e.title Активо три — торговый центр Эко&nbsp;видное
                     +e.A.link(href='#') На продажу
@@ -35,7 +35,7 @@ html(lang='ru')
                             +e.data-value
                                 a(href='#') Очень длинное название документа номер два
                             +e.data-value
-                                a(href='#') Самое длинное длинное название документа 
+                                a(href='#') Самое длинное длинное название документа
                             +e.data-value
                                 a(href='#') Очень длинное название документа три
                             +e.data-value
@@ -43,47 +43,13 @@ html(lang='ru')
 
                 +e.toggles
                     +e.toggle
-                        +e.toggle-title Тип доходности
-                        +e.toggle-inputs
-                            +e.LABEL.toggle-input
-                                input(type='radio' name='toggle1' checked='')
-                                span номинальная
-                            +e.LABEL.toggle-input
-                                input(type='radio' name='toggle1')
-                                span эффективная
+                        +custom-select(false, ['номинальная', 'эффективная'], false, 'Тип доходности')
                     +e.toggle
-                        +e.toggle-title Показатели за
-                        +e.toggle-inputs
-                            +e.LABEL.toggle-input
-                                input(type='radio' name='toggle2' checked='')
-                                span 12 месяцев
-                            +e.LABEL.toggle-input
-                                input(type='radio' name='toggle2')
-                                span все время
+                        +custom-select(false, ['12 месяцев', 'все время'], false, 'Показатели за')
                     +e.toggle
-                        +e.toggle-title Доходность за
-                        +e.toggle-inputs
-                            +e.LABEL.toggle-input
-                                input(type='radio' name='toggle3')
-                                span период
-                            +e.LABEL.toggle-input
-                                input(type='radio' name='toggle3' checked='')
-                                span год
-                            +e.LABEL.toggle-input
-                                input(type='radio' name='toggle3')
-                                span 12 месяцев
+                        +custom-select(false, ['12 месяцев', 'все время'], false, 'Доходность за')
                     +e.toggle
-                        +e.toggle-title Период
-                        +e.toggle-inputs
-                            +e.LABEL.toggle-input
-                                input(type='radio' name='toggle4')
-                                span месяц
-                            +e.LABEL.toggle-input
-                                input(type='radio' name='toggle4' checked='')
-                                span квартал
-                            +e.LABEL.toggle-input
-                                input(type='radio' name='toggle4')
-                                span год
+                        +custom-select(false, ['месяц', 'квартал', 'год'], false, 'Период')
                 +e.graph
                     +monitoring-graph
                 +e.table
